Fixing background color for dark mode

--- a/_sass/base/_reset.scss
+++ b/_sass/base/_reset.scss
@@ -10,6 +10,9 @@
 
 :root {
     color-scheme: light dark;
+    @media (prefers-color-scheme: dark) {
+      background-color: #1E1E1E;
+    }
 }
 
 * {
